--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,9 +9,12 @@
         tools:showIn="@layout/activity_main"
         android:orientation="vertical"
         tools:context=".MainActivity">
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recylerxml"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-
-
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </LinearLayout>
