--- a/app/src/main/res/layout/diseniorecycler.xml
+++ b/app/src/main/res/layout/diseniorecycler.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
@@ -11,13 +11,18 @@
         <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#DF6F4D"
-        android:id="@+id/linearboton">
+        android:id="@+id/linearboton"
+        >
         <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
         android:padding="8dp"
                   android:id="@+id/nombresjugadores"
+        android:gravity="center"
+                  android:textSize="20dp"
         />
         <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:id="@+id/mostrarScore"/>
+        android:id="@+id/mostrarScore"
+        android:gravity="center"
+                  android:textSize="20dp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
