--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -42,6 +42,7 @@ android:orientation="vertical">
             <TextView
                     android:id="@+id/equipo1contador"
                     android:text="0"
+                    android:textSize="40sp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -91,6 +92,7 @@ android:orientation="vertical">
                     android:id="@+id/contadorequipo2"
                     android:text="0"
                     android:layout_width="match_parent"
+                    android:textSize="40sp"
                     android:layout_height="wrap_content"
                     android:gravity="center"
             />
